[package]
name = "ttdl_lunar_calendar"
version = "0.1.0"
authors = ["eugnma"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ttdl-lunar-calendar"
path = "src/main.rs"

[dependencies]
lunardate = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
